--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
 }
 html {
+  overflow-x: hidden;
   body {
     height: 100%;
     width: 100%;
